[package]
name = "bevy-ofm-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_ecs_tilemap = "0.15.0"
bevy_pancam = "0.17.0"
crossbeam-channel = "0.5.14"
font-kit = "0.14.2"
geo = "0.29.3"
image = "0.25.5"
mvt-reader = "1.6.0"
raqote = "0.8.5"
rstar = "0.12.2"
ureq = "2.12.1"
